--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>About</h2>
             <p>
                 Hello world!<br/>
-                I'm a software developer, passionate in delivering immersive digital experiences. <br/>
+                I'm a software developer, passionate about creating immersive digital experiences. <br/>
                 Constantly deep diving into the newest tech, especially XR - but also in love with mountains, pixel art and live coding music.
             </p>
         </section>
