--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <p>
                             Embodiment is an avatar-based project, started by 
                             <a href="http://sassofederica.com" target="_blank">Federica Sasso</a>, 
-                            that raise awareness on post-pandemic social difficulties. <br/>
+                            that raise awareness of post-pandemic social difficulties. <br/>
                             The user is familiarized with the new virtual body, while the 
                             <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
                             fills with a crowd of people that gradually surrounds the user. <br/>
