--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            A prototype of a text annotator for document classification developed during my internship at
+                            A prototype of a document annotator for text classification developed during my internship at
                             <a href="https://www.expert.ai" target="_blank">expert.ai</a>. </br>
-                            The web app aimed to improve the usability of the current system, so it followed a UI/UX design process and final testing.
+                            The web app aimed to improve the usability of the previous system and speed up the tagging process.
                         </p>
                     </div>
                 </div>
